<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background_1"
    android:orientation="vertical"
    android:layout_margin="2dip"
    android:gravity="center" >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
    		android:textSize="35sp"
            android:text="@string/exitha"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white" />

    </LinearLayout>
    
	<LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"  >

       	<Button
       	    android:id="@+id/buttonyes"
       	    style="@style/btn_style_2"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_marginRight="5dp"
       	    android:text="@string/btn_yes" />

       	<Button
             android:id="@+id/buttonno"
             style="@style/btn_style_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_no" />
	</LinearLayout>
</LinearLayout>