<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tanrs_80"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView6"
            android:contentDescription="@string/hello_world"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:src="@drawable/completed_1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:contentDescription="@string/hello_world"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="visible"
            android:src="@drawable/star" />
        <ImageView
            android:id="@+id/imageView2"
            android:contentDescription="@string/hello_world"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="visible"
            android:src="@drawable/star" />
        <ImageView
            android:id="@+id/imageView3"
            android:contentDescription="@string/hello_world"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="visible"
            android:src="@drawable/star" />
        <ImageView
            android:id="@+id/imageView4"
            android:contentDescription="@string/hello_world"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="visible"
            android:src="@drawable/star" />
        <ImageView
            android:id="@+id/imageView5"
            android:contentDescription="@string/hello_world"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="visible"
            android:src="@drawable/star" />

    </LinearLayout>
    
	<LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"  >

     	<Button
     	    android:id="@+id/MainMenu_1"
     	    style="@style/btn_style_2"
     	    android:layout_width="wrap_content"
     	    android:layout_height="wrap_content"
     	    android:layout_marginRight="5dp"
     	    android:text="@string/btn_mainmenu" />

       	<Button
       	    android:id="@+id/Retry_1"
       	    style="@style/btn_style_2"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:layout_marginRight="5dp"
       	    android:text="@string/btn_retry" />

         <Button
             android:id="@+id/Next_1"
             style="@style/btn_style_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/btn_next" />
	</LinearLayout>
</LinearLayout>