<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activityKuralGame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:gravity="center"
    android:orientation="vertical">
	<com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
    <LinearLayout	android:layout_width="fill_parent"	android:layout_height="fill_parent"	android:gravity="center"	android:orientation="vertical" >

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical">

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:orientation="horizontal">

                    <Button android:id="@+id/button1" style="@style/btnStyledrop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:clickable="false" android:focusable="false" android:text="@string/button" />

                    <Button android:id="@+id/button2" style="@style/btnStyledrop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:clickable="false" android:focusable="false" android:text="@string/button" />

                    <Button android:id="@+id/button3" style="@style/btnStyledrop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:clickable="false" android:focusable="false" android:text="@string/button" />

                    <Button android:id="@+id/button4" style="@style/btnStyledrop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="false" android:focusable="false" android:text="@string/button" />

                </LinearLayout>

                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">

                    <Button android:id="@+id/button5" style="@style/btnStyledrop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:clickable="false" android:focusable="false" android:text="@string/button" />

                    <Button android:id="@+id/button6" style="@style/btnStyledrop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:clickable="false" android:focusable="false" android:text="@string/button" />

                    <Button android:id="@+id/button7" style="@style/btnStyledrop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:clickable="false" android:focusable="false" android:text="@string/button" />

                </LinearLayout>
            </LinearLayout><LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="center" android:orientation="vertical">

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:layout_marginTop="10dp">

                    <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">

                    <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:textAppearance="?android:attr/textAppearanceLarge" />

                    <TextView android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" />
                    <Button android:id="@+id/submit" style="@style/btnStyleGame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="checkAnswerClick" android:text="@string/check" android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginBottom="5dp"
			        android:gravity="center"
			        android:orientation="vertical" >
			
			        <ImageView
			            android:id="@+id/complete"
			            android:layout_width="100dp"
			            android:layout_height="30dp"
			            android:layout_marginTop="15dp"
			            android:contentDescription="@string/hello_world"
			            android:src="@drawable/completed_1" />
			
			    </LinearLayout>
                <LinearLayout
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginBottom="5dp"
				        android:orientation="horizontal" >
				
				        <ImageView
				            android:id="@+id/star1"
				            android:contentDescription="@string/hello_world"
				            android:layout_width="30dp"
				            android:layout_height="30dp"
				            android:visibility="visible"
				            android:src="@drawable/star" />
				        <ImageView
				            android:id="@+id/star2"
				            android:contentDescription="@string/hello_world"
				            android:layout_width="30dp"
				            android:layout_height="30dp"
				            android:visibility="visible"
				            android:src="@drawable/star" />
				        <ImageView
				            android:id="@+id/star3"
				            android:contentDescription="@string/hello_world"
				            android:layout_width="30dp"
				            android:layout_height="30dp"
				            android:visibility="visible"
				            android:src="@drawable/star" />
				        <ImageView
				            android:id="@+id/star4"
				            android:contentDescription="@string/hello_world"
				            android:layout_width="30dp"
				            android:layout_height="30dp"
				            android:visibility="visible"
				            android:src="@drawable/star" />
				        <ImageView
				            android:id="@+id/star5"
				            android:contentDescription="@string/hello_world"
				            android:layout_width="30dp"
				            android:layout_height="30dp"
				            android:visibility="visible"
				            android:src="@drawable/star" />
				    </LinearLayout>
            </LinearLayout>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/part_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/subpart_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/athigaram_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/kural_num_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
    
    <Button
	    android:id="@+id/movePrev"
	    android:background="@android:color/transparent"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
		android:layout_alignParentStart="true"
	    android:layout_alignParentLeft="true"
	    android:layout_centerVertical="true"
	    android:onClick="prevClick"
		android:textSize="30sp"
	    android:textColor="@color/white"
	    android:text="@string/left" />
    
    <Button
	    android:id="@+id/moveNext"
	    android:background="@android:color/transparent"
	    android:layout_width="30dp"
	    android:layout_height="30dp"
	    android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
	    android:layout_centerVertical="true"
	    android:onClick="nextClick"
		android:textSize="30sp"
	    android:textColor="@color/white"
	    android:text="@string/right" />
    <Button
	    android:id="@+id/help"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginRight="5dp"
		android:layout_marginEnd="5dp"
	    android:layout_marginTop="5dp"
	    android:background="@android:color/transparent"
	    android:onClick="helpClick"
	    android:textSize="25sp"
	    android:text="@string/help"
	    android:textColor="@color/white" />

</RelativeLayout>